# google-domains-ddns-updater

./: Cargo.toml  README.md
src/: main.rs
