[package]
name = "google_domains_ddns_updater"
version = "0.1.1"
authors = ["Shinya <mr.sakurai.shinya@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "json"] }